dev/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deploy
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: aldisti/app:v1
        ports:
        - containerPort: 80
